# GameEngine

./: makefile
assets/models/: Unity.blend  x-wing.3mf
engine/: CMakeLists.txt  LICENSE  OdysseyEngine.h  makefile
engine/include/: camera.h  entrypoint.h  events.h  game_engine.h  game_object.h  light.h  logging.h  material.h  mesh.h  model.h  renderer.h  scene.h  shader.h  shadow_map.h  texture.h  window.h
engine/src/: camera.cpp  events.cpp  game_engine.cpp  light.cpp  logging.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp  shader.cpp  shadow_map.cpp  texture.cpp  window.cpp
include/: camera.h  game_engine.h  light.h  logging.h  material.h  mesh.h  model.h  renderer.h  scene.h  shader.h  shadow_map.h  texture.h  window.h
sandbox/: makefile  sandbox.cpp  sandbox.hpp
sandbox/assets/models/: x-wing.mtl
sandbox/mocking_files/: main_scene.json  material.json
sandbox/shaders/: shader.frag
shaders/: directional_shadow_map.vert  shader.frag  shader.vert
src/: camera.cpp  game_engine.cpp.tmp  light.cpp  logging.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp  shader.cpp  shadow_map.cpp  texture.cpp  window.cpp
